# lib/api-spec/openapi.yaml
@@ -680,6 +680,8 @@ components:
           type: string
         heroSubtitle:
           type: string
+        heroImageUrl:
+          type: ["string", "null"]
         email:
           type: string
         phone:
@@ -721,6 +723,8 @@ components:
           type: string
         heroSubtitle:
           type: string
+        heroImageUrl:
+          type: ["string", "null"]
         email:
           type: string
         phone:
